# LlamaFuzzer

./: .gitignore  LICENSE  Modelfile  README.md  create_db.py  main.py  pyproject.toml
ai/: __init__.py  generator.py  payloads.yaml  template.py  train.py
ai/nuclei_templates/: SQL Injection.yaml
api/: routes.py
api/models/: models.py
api/utils/: DataModel.py  db.py
csv/: FI_payload.csv  RCE_payload.csv  SQL_payload.csv  XSS_payload.csv  test.csv
static/: chat.css  chat.js  fuzz.css  fuzz.js  login.css  payload.css  payload.js  register.css  train.css  train.js
templates/: chat.html  fuzz.html  index.html  login.html  payload.html  register.html  train.html
utils/: __init__.py
view/: payloads.yaml
